--- a/Project_3 _Data_Import.Rmd
+++ b/Project_3 _Data_Import.Rmd
@@ -7,17 +7,23 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-library(XML)
+ library(XML)
 library(RCurl)
 library(knitr)
 library(dplyr)
 library(plyr)
 library(tidyr)
+library(tidyverse)
+library(tidyselect)
 library(data.table)
 ```
 
 ```{r}
  general_skills <- read.csv(file="https://raw.githubusercontent.com/josephsimone/DATA_607_Project_3/master/kaggle_ds_general_skills_revised.csv")
+
+head(general_skills)
+
+
 ```
 
 ```{r}
@@ -35,8 +41,6 @@ dt2$Skill_Set <- "Tech"
  dt2 = subset(dt2, select = -c(LinkedIn.., Indeed.., SimplyHired.., Monster.., Avg.., GlassDoor.Self.Reported...2017, Difference) )
  
 result<-rbind(dt1, dt2)
-
-
 ```
 
 
@@ -51,6 +55,82 @@ names(result)[names(result) == "ï..Keyword"] <- "Keyword"
 
 
 ```{r}
-write.csv(result, file = "joined_df.csv",row.names=FALSE)
+write.csv(result, file = "joined_df2.csv",row.names=FALSE)
+```
+
+```{r}
+ds_skills <- read_csv("joined_df2.csv")
+head(ds_skills)
+
+
+
+ds_skills$Total <- rowSums(sapply(ds_skills[,c(2:5)], as.numeric))
+ds_skills <- mutate(ds_skills[, c(1,6,2:5,7)])
+ds_skills <- data.frame(ds_skills)
+
+colnames(ds_skills)
+
+head(ds_skills)
+
+LinkedIn <- 8610
+Indeed <- 5138
+SimplyHired <- 3829
+Monster <- 3746
+Total <- LinkedIn + Indeed + SimplyHired + Monster
+
+ds_skills$LinkedIn <- ds_skills$LinkedIn/LinkedIn*100
+ds_skills$Indeed <- ds_skills$Indeed/Indeed*100
+ds_skills$SimplyHired <- ds_skills$SimplyHired/SimplyHired*100
+ds_skills$Monster <- ds_skills$Monster/Monster*100
+ds_skills$Total <- ds_skills$Total/Total*100
+
+head(ds_skills)
+```
+
+```{r}
+ds_skills_soft <- filter(ds_skills, ds_skills$Skill_Set == "Soft")
+dim(ds_skills_soft)
+head(ds_skills_soft, 20)
+
+ds_skills_soft <- arrange(ds_skills_soft, desc(Total))
+head(ds_skills_soft)
+
+#Top 10 skills
+
+ds_skills_soft <- ds_skills_soft[1:10,c(1,3:7)]
+ds_skills_soft
+ds_skills_soft$Keyword
+
+```
+
+```{r}
+library(plotly)
+
+plot_ly(ds_skills_soft, x = ~ ds_skills_soft, y = ds_skills_soft$Total, type = 'bar', name = ds_skills_soft$Keyword)
+
+```
+
+
+```{r}
+ds_skills_tech <- filter(ds_skills, ds_skills$Skill_Set == "Tech")
+dim(ds_skills_tech)
+head(ds_skills_tech, 20)
+
+ds_skills_tech <- arrange(ds_skills_tech, desc(Total))
+head(ds_skills_tech)
+
+#Top 10 skills
+
+top_10_tech <- ds_skills_tech[1:10,c(1,3:7)]
+top_10_tech
+top_10_tech$Keyword
+```
+
+
+```{r}
+library(plotly)
+
+plot_ly(top_10_tech, x = ~ top_10_tech, y = top_10_tech$Total, type = 'bar', name = top_10_tech$Keyword)
+
 ```
 
