--- a/Project_3 _Data_Import.Rmd
+++ b/Project_3 _Data_Import.Rmd
@@ -7,7 +7,9 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
- library(XML)
+devtools::install_github("ropensci/plotly")
+library(XML)
+library(htmltools)
 library(RCurl)
 library(knitr)
 library(dplyr)
@@ -16,6 +18,7 @@ library(tidyr)
 library(tidyverse)
 library(tidyselect)
 library(data.table)
+library(plotly)
 ```
 
 ```{r}
@@ -31,8 +34,6 @@ software_skills <-read.csv(file = "https://raw.githubusercontent.com/josephsimon
 ```
 
 
-
-
 ```{r}
  dt1 <- data.table(general_skills, key = "ï..Keyword")
 dt1$Skill_Set <- "Soft"
@@ -42,7 +43,6 @@ dt2$Skill_Set <- "Tech"
  
 result<-rbind(dt1, dt2)
 ```
-
 
 
 ```{r}
@@ -61,8 +61,6 @@ write.csv(result, file = "joined_df2.csv",row.names=FALSE)
 ```{r}
 ds_skills <- read_csv("joined_df2.csv")
 head(ds_skills)
-
-
 
 ds_skills$Total <- rowSums(sapply(ds_skills[,c(2:5)], as.numeric))
 ds_skills <- mutate(ds_skills[, c(1,6,2:5,7)])
@@ -87,50 +85,138 @@ ds_skills$Total <- ds_skills$Total/Total*100
 head(ds_skills)
 ```
 
+
+# Top 10 Soft Skills for Data Scientists
+
+### Data transformations for visualization
+
 ```{r}
 ds_skills_soft <- filter(ds_skills, ds_skills$Skill_Set == "Soft")
 dim(ds_skills_soft)
 head(ds_skills_soft, 20)
 
 ds_skills_soft <- arrange(ds_skills_soft, desc(Total))
-head(ds_skills_soft)
+head(ds_skills_soft, 2)
 
-#Top 10 skills
+#Top 10 soft skills
 
 ds_skills_soft <- ds_skills_soft[1:10,c(1,3:7)]
-ds_skills_soft
-ds_skills_soft$Keyword
-
+head(ds_skills_soft, 2)
+#ds_skills_soft$Keyword
 ```
+
+
+# Top ten Soft skills as a percentage of total Data Science jobs
 
 ```{r}
-library(plotly)
+p <- plot_ly(ds_skills_soft, x = ~ ds_skills_soft, y = ds_skills_soft$Total, type = 'bar', name = ds_skills_soft$Keyword)
 
-plot_ly(ds_skills_soft, x = ~ ds_skills_soft, y = ds_skills_soft$Total, type = 'bar', name = ds_skills_soft$Keyword)
-
+p
 ```
 
+
+#Bar Graphs
+## Top 10 Soft as a pecentage of total data science jobs by job site
+
+```{r}
+top_10_soft_visual <- data.frame("Keyword"=ds_skills_soft, ds_skills_soft)
+head(top_10_soft_visual, 2)
+
+data_soft <- top_10_soft_visual[,c('Keyword', 'LinkedIn', 'Indeed', 'SimplyHired', 'Monster', 'Total')]
+head(data_soft, 2)
+
+q <- plot_ly(data_soft, x = ~Keyword, y = ~LinkedIn, type = 'bar', name = "Linkedin") %>%
+  add_trace(y = ~Indeed, name = "Indeed") %>% 
+  add_trace(y = ~SimplyHired, name = "SimplyHired") %>% 
+  add_trace(y = ~Monster, name = "Monster") %>% 
+  add_trace(y = ~Total, name = "Average") %>% 
+  layout(title = 'Soft Skills by Job Site', yaxis = list(title = '% of Data Science Jobs'), xaxis = list(title = 'Soft Skills'), barmode = 'group')
+
+q
+```
+
+
+
+# Top 10 Technical Skills for Data Scientists
+
+### Data transformations for visualization
 
 ```{r}
 ds_skills_tech <- filter(ds_skills, ds_skills$Skill_Set == "Tech")
 dim(ds_skills_tech)
+
+# View first 20 skills
+
 head(ds_skills_tech, 20)
 
-ds_skills_tech <- arrange(ds_skills_tech, desc(Total))
-head(ds_skills_tech)
+#Arrange data from largest to smallest by the Totals column
 
-#Top 10 skills
+ds_skills_tech <- arrange(ds_skills_tech, desc(Total))
+head(ds_skills_tech, 2)
+
+#Filter out only the Top 10 technical skills
 
 top_10_tech <- ds_skills_tech[1:10,c(1,3:7)]
-top_10_tech
-top_10_tech$Keyword
+head(top_10_tech, 2)
+#top_10_tech$Keyword
 ```
 
+
+### Top ten Technical skills as a percentage of total Data Science jobs
 
 ```{r}
-library(plotly)
+x <- plot_ly(top_10_tech, x = ~ top_10_tech, y = top_10_tech$Total, type = 'bar', name = top_10_tech$Keyword)
 
-plot_ly(top_10_tech, x = ~ top_10_tech, y = top_10_tech$Total, type = 'bar', name = top_10_tech$Keyword)
+x
+```
+
+### Tried a piechart (Not the best way to visualize data)
+```{r}
+#library(plotly)
+#devtools::install_github("ropensci/plotly")
+
+#top_10_tech_visual_pie <- data.frame("Keyword"=top_10_tech, top_10_tech)
+#data <- top_10_tech_visual_pie[,c('Keyword', 'LinkedIn')]
+#data
+
+#plot_ly(data, labels = ~Keyword, values = ~LinkedIn, type = 'pie') %>%
+  #layout(title = 'Top 10 Tech',
+         #xaxis = list(showgrid = FALSE, zeroline = FALSE, showticklabels = FALSE),
+         #yaxis = list(showgrid = FALSE, zeroline = FALSE, showticklabels = FALSE))
+
+#plot_ly(data, type = 'bar') %>%
+  #layout(title = 'top_10_tech'
+         #)
+
+#p <- plot_ly(data, labels = ~Keyword, values = ~LinkedIn, type = 'pie') %>%
+  #layout(title = 'top_10_tech',
+         #xaxis = list(showgrid = FALSE, zeroline = FALSE, showticklabels = FALSE),
+         #yaxis = list(showgrid = FALSE, zeroline = FALSE, showticklabels = FALSE))
+
+# Create a shareable link to your chart
+# Set up API credentials: https://plot.ly/r/getting-started
+  
+#chart_link = api_create(p, filename="pie-basic")
+#chart_link
+
 
 ```
 
+##Bar Graphs
+### Top 10 Techs as a pecentage of total data science jobs by job site
+
+```{r, eval=TRUE}
+top_10_tech_visual <- data.frame("Keyword"=top_10_tech, top_10_tech)
+head(top_10_tech_visual, 2)
+data <- top_10_tech_visual[,c('Keyword', 'LinkedIn', 'Indeed', 'SimplyHired', 'Monster', 'Total')]
+head(data, 2)
+
+s <- plot_ly(data, x = ~Keyword, y = ~LinkedIn, type = 'bar', name = "Linkedin") %>%
+  add_trace(y = ~Indeed, name = "Indeed") %>% 
+  add_trace(y = ~SimplyHired, name = "SimplyHired") %>% 
+  add_trace(y = ~Monster, name = "Monster") %>% 
+  add_trace(y = ~Total, name = "Average") %>% 
+  layout(title = 'Technical Skills by Job Site', yaxis = list(title = '% of Data Science Jobs'), xaxis = list(title = 'Tech Skills'), barmode = 'group')
+
+s
+```
