--- a/Project_3_Presentation.Rmd
+++ b/Project_3_Presentation.Rmd
@@ -39,7 +39,7 @@ include_graphics(imgage)
 - However, as a team, we needed some sort of data pool to start calulating perameters   to answer a research question(s).
 
 
--With some futher research, we found a similar project that wanted to answer a similar   question. 
+- With some futher research, we found a similar project that wanted to answer a          similar   question. 
 
 
 -https://www.kaggle.com/discdiver/the-most-in-demand-skills-for-data-scientists
@@ -133,53 +133,23 @@ ds_skills$SimplyHired <- ((ds_skills$SimplyHired)/(SimplyHired*100))
 ds_skills$Monster <- ((ds_skills$Monster)/((Monster*10)))
 ds_skills$Total <- ((ds_skills$Total/((Total*100))))
 ```
-***
-
-Top 10 Soft Skills for Data Scientists
-
-```{r}
-ds_skills_soft <- filter(ds_skills, ds_skills$Skill_Set == "Soft")
-head(ds_skills_soft, 5)
-```
-***
-
-```{r}
-#Top 10 soft skills
-ds_skills_soft <- arrange(ds_skills_soft, desc(Total))
-ds_skills_soft <- ds_skills_soft[1:10,c(1,3:7)]
-head(ds_skills_soft, 2)
-
-```
-***
- Top ten Soft skills as a percentage of total Data Science jobs
-
-```{r, include=FALSE}
-p <- plot_ly(ds_skills_soft, x = ~ ds_skills_soft, y = ds_skills_soft$Total, type = 'bar', name = ds_skills_soft$Keyword)
-```
 
 
-```{r}
-p
-```
+
 
 ***
 
 Set up for Bar Graphs
 
 ```{r}
-top_10_soft_visual <- data.frame("Keyword"=ds_skills_soft, ds_skills_soft)
-head(top_10_soft_visual, 2)
-data_soft <- top_10_soft_visual[,c('Keyword', 'LinkedIn', 'Indeed', 'SimplyHired', 'Monster', 'Total')]
-```
-***
- 
- Top 10 Non-Technical Skills for Data Scientists
-
-```{r}
 ds_skills_soft <- filter(ds_skills, ds_skills$Skill_Set == "Soft")
-# View first 20 non-technical skills
-head(ds_skills_soft, 10)
+top_10_soft_visual <- data.frame("Keyword"=ds_skills_soft, ds_skills_soft)
+
+data_soft <- top_10_soft_visual[,c('Keyword', 'LinkedIn', 'Indeed', 'SimplyHired', 'Monster', 'Total')]
+
 ```
+
+ 
 
 ***
 ```{r}
@@ -190,17 +160,29 @@ ds_skills_soft <- arrange(ds_skills_soft, desc(Total))
 top_10_soft <- ds_skills_soft[1:10,c(1,3:7)]
 
 ```
+***
+ Top Ten Non-Technical skills as a percentage of total Data Science jobs
+
+```{r, include=FALSE}
+y <- plot_ly(top_10_soft, x = ~ top_10_soft, y = top_10_soft$Total, type = 'bar', name = top_10_soft$Keyword)
+```
+
+
+```{r}
+y
+```
+
 
 ***
 
- Top 10 Technical Skills for Data Scientists
+ Top 5 Technical Skills for Data Scientists
 
 Data transformations for visualization
 
 ```{r}
 ds_skills_tech <- filter(ds_skills, ds_skills$Skill_Set == "Tech")
 
-head(ds_skills_tech, 10)
+head(ds_skills_tech, 5)
 ```
 
 
@@ -217,7 +199,7 @@ top_10_tech <- ds_skills_tech[1:10,c(1,3:7)]
 
 
 ***
- Top ten Technical skills as a percentage of total Data Science jobs
+ Top Ten Technical skills as a percentage of total Data Science jobs
 
 ```{r, include=FALSE}
 x <- plot_ly(top_10_tech, x = ~ top_10_tech, y = top_10_tech$Total, type = 'bar', name = top_10_tech$Keyword)
@@ -228,33 +210,16 @@ x <- plot_ly(top_10_tech, x = ~ top_10_tech, y = top_10_tech$Total, type = 'bar'
 x
 ```
 
-***
- Top ten Technical skills as a percentage of total Data Science jobs
-
-```{r, include=FALSE}
-y <- plot_ly(top_10_soft, x = ~ top_10_soft, y = top_10_soft$Total, type = 'bar', name = top_10_soft$Keyword)
-```
-
-
-```{r}
-y
-```
-
 
 
 ***
-Top 10 Techs as a pecentage of total data science jobs by job site
+Top 10 Tech Skills as an average pecentage of total data science jobs by job site
 
 ```{r, eval=TRUE, message = FALSE, warning=FALSE}
 top_10_tech_visual <- data.frame("Keyword"=top_10_tech, top_10_tech)
-head(top_10_tech_visual, 2)
+data <- top_10_tech_visual[,c('Keyword', 'LinkedIn', 'Indeed', 'SimplyHired', 'Monster', 'Total')]
 ```
 
-***
-```{r, eval=TRUE, message = FALSE, warning=FALSE}
-data <- top_10_tech_visual[,c('Keyword', 'LinkedIn', 'Indeed', 'SimplyHired', 'Monster', 'Total')]
-head(data, 2)
-```
 ***
 
 ```{r, eval=TRUE, message = FALSE, warning=FALSE, include=FALSE}
@@ -273,17 +238,17 @@ s
 
 ***
 
- Top 10 Techs as a pecentage of total data science jobs by job site
+ Top 10 Non-Tech SKills as an average pecentage of total data science jobs by job site
 
 ```{r, eval=TRUE, message=FALSE, warning=FALSE}
 top_10_soft_visual <- data.frame("Keyword"=top_10_soft, top_10_soft)
-head(top_10_soft_visual, 2)
+
 ```
 
 ***
 ```{r, eval=TRUE, message=FALSE, warning=FALSE}
 data2 <- top_10_soft_visual[,c('Keyword', 'LinkedIn', 'Indeed', 'SimplyHired', 'Monster', 'Total')]
-head(data, 2)
+
 ```
 ***
 
