--- a/Project_3 _Data_Final.Rmd
+++ b/Project_3 _Data_Final.Rmd
@@ -1,13 +1,14 @@
 ---
-title: "Data 603 Project 3"
+title: "Data 607 Project 3"
 author: "Joseph Simone & Kigamba Samuel"
 date: "10/20/2019"
-output: html_document
+output:
+  html_document: default
+  pdf_document: default
 ---
-
-
-```{r setup, include=FALSE}
-
+  
+  
+  ```{r setup, include=FALSE}
 library(XML)
 library(RCurl)
 library(knitr)
@@ -15,8 +16,11 @@ library(dplyr)
 library(plyr)
 library(tidyr)
 library(plotly)
+library(tidyverse)
 library(tidyselect)
 library(data.table)
+#install.packages('png')
+library(htmltools)
 library(png)
 ```
 
@@ -29,14 +33,25 @@ This is a project for your entire class section to work on together, since being
 W. Edwards Deming said, “In God we trust, all others must bring data.” Please use data to answer the question, “Which are the most valued data science skills?” Consider your work as an exploration; there is not necessarily a “right answer.”
 
 
-### Background 
+### Background
 
 When researching for this project, this study https://365datascience.com/research-into-1001-data-scientist-profiles/, has findings that fits the critia needed to be calculated in order to complete this project. However, as a team, we needed some sort of data pool to start calulating perameters to answer a research question(s).
 
 ```{r, include=TRUE }
-imgage <- "C:/Users/jpsim/Documents/DATA Acquisition and Management/journal.png"
+imgage <- "https://raw.githubusercontent.com/josephsimone/DATA_607_Project_3/master/journal.PNG"
 include_graphics(imgage)
 ```
+```{r, echo=FALSE}
+url <- "https://raw.githubusercontent.com/josephsimone/DATA_607_Project_3/master/journal.PNG"
+```
+
+![](`r url`)
+
+
+<center><img src="`r url`"></center>
+
+
+
 
 With some futher research, we found a similar project that wanted to answer a similar question. 
 
@@ -45,22 +60,46 @@ https://www.kaggle.com/discdiver/the-most-in-demand-skills-for-data-scientists
 
 
 ```{r, include=TRUE }
-imgage <- "C:/Users/jpsim/Documents/DATA Acquisition and Management/kaggle.png"
+imgage <- "https://raw.githubusercontent.com/josephsimone/DATA_607_Project_3/master/kaggle.PNG"
 include_graphics(imgage)
 ```
+
+
+```{r, echo=FALSE}
+url <- "https://raw.githubusercontent.com/josephsimone/DATA_607_Project_3/master/kaggle.PNG"
+```
+
+![](`r url`)
+
+
+<center><img src="`r url`"></center>
+
+
 
 For this project we used the two main data-sets from the above kaggle web-page to answer our research question(s)
 
 kaggle_ds_job_listing_software.csv & kaggle_ds_general_skills_revised.csv
 
 ```{r, include=TRUE }
-imgage <- "C:/Users/jpsim/Documents/DATA Acquisition and Management/kaggle_data.png"
+imgage <- "https://github.com/josephsimone/DATA_607_Project_3/blob/master/kaggle_data.PNG"
 include_graphics(imgage)
 ```
 
 
+```{r, echo=FALSE}
+url <- "https://raw.githubusercontent.com/josephsimone/DATA_607_Project_3/master/kaggle_data.PNG"
+```
+
+![](`r url`)
+
+
+<center><img src="`r url`"></center>
+
+
+
+
 ```{r}
- general_skills <- read.csv(file="https://raw.githubusercontent.com/josephsimone/DATA_607_Project_3/master/kaggle_ds_general_skills_revised.csv")
+general_skills <- read.csv(file="https://raw.githubusercontent.com/josephsimone/DATA_607_Project_3/master/kaggle_ds_general_skills_revised.csv")
 head(general_skills)
 ```
 
@@ -85,7 +124,7 @@ dt1 <- data.table(general_skills, key = "ï..Keyword")
 dt1$Skill_Set <- "Soft"
 dt2 <- data.table(software_skills, key = "ï..Keyword")
 dt2$Skill_Set <- "Tech"
- dt2 = subset(dt2, select = -c(LinkedIn.., Indeed.., SimplyHired.., Monster.., Avg.., GlassDoor.Self.Reported...2017, Difference) )
+dt2 = subset(dt2, select = -c(LinkedIn.., Indeed.., SimplyHired.., Monster.., Avg.., GlassDoor.Self.Reported...2017, Difference) )
 ```
 
 
@@ -115,6 +154,7 @@ write.csv(result, file = "joined_df2.csv",row.names=FALSE)
 ## Importing newly created csv
 ```{r}
 ds_skills <- read.csv("joined_df2.csv")
+ds_skills <- read_csv(file = "https://raw.githubusercontent.com/josephsimone/DATA_607_Project_3/master/joined_df2.csv")
 head(ds_skills)
 ```
 
@@ -126,7 +166,8 @@ ds_skills$Total <- rowSums(sapply(ds_skills[,c(2:5)], as.numeric))
 ds_skills <- mutate(ds_skills[, c(1,6,2:5,7)])
 ds_skills <- data.frame(ds_skills)
 colnames(ds_skills)
-head(ds_skills)
+dim(ds_skills)
+head(ds_skills, 52)
 ```
 
 
@@ -141,12 +182,13 @@ Indeed <- 5138
 SimplyHired <- 3829
 Monster <- 3746
 Total <- LinkedIn + Indeed + SimplyHired + Monster
-ds_skills$LinkedIn <- ((ds_skills$LinkedIn)/(LinkedIn*100))
-ds_skills$Indeed <- ((ds_skills$Indeed)/(Indeed*100))
-ds_skills$SimplyHired <- ((ds_skills$SimplyHired)/(SimplyHired*100))
-ds_skills$Monster <- ((ds_skills$Monster)/((Monster*10)))
-ds_skills$Total <- ((ds_skills$Total/((Total*100))))
-head(ds_skills)
+ds_skills$LinkedIn <- ((ds_skills$LinkedIn)/(LinkedIn))*100
+ds_skills$Indeed <- ((ds_skills$Indeed)/(Indeed))*100
+ds_skills$SimplyHired <- ((ds_skills$SimplyHired)/(SimplyHired))*100
+ds_skills$Monster <- ((ds_skills$Monster)/((Monster)))*100
+ds_skills$Total <- ((ds_skills$Total/((Total))))*100
+dim(ds_skills)
+head(ds_skills, 52)
 ```
 
 
@@ -182,7 +224,6 @@ p
 top_10_soft_visual <- data.frame("Keyword"=ds_skills_soft, ds_skills_soft)
 head(top_10_soft_visual, 2)
 data_soft <- top_10_soft_visual[,c('Keyword', 'LinkedIn', 'Indeed', 'SimplyHired', 'Monster', 'Total')]
-
 ```
 
 
@@ -197,10 +238,8 @@ dim(ds_skills_soft)
 head(ds_skills_soft, 20)
 #Arrange data from largest to smallest by the Totals column
 ds_skills_soft <- arrange(ds_skills_soft, desc(Total))
-
 #Filter out only the Top 10 non-technical skills
 top_10_soft <- ds_skills_soft[1:10,c(1,3:7)]
-
 top_10_soft
 ```
 
@@ -213,13 +252,11 @@ top_10_soft
 ds_skills_tech <- filter(ds_skills, ds_skills$Skill_Set == "Tech")
 dim(ds_skills_tech)
 # View first 20 skills
-head(ds_skills_tech, 20)
+head(ds_skills_tech, 37)
 #Arrange data from largest to smallest by the Totals column
 ds_skills_tech <- arrange(ds_skills_tech, desc(Total))
-
 #Filter out only the Top 10 technical skills
 top_10_tech <- ds_skills_tech[1:10,c(1,3:7)]
-
 top_10_tech
 ```
 
@@ -250,11 +287,11 @@ head(top_10_tech_visual, 2)
 data <- top_10_tech_visual[,c('Keyword', 'LinkedIn', 'Indeed', 'SimplyHired', 'Monster', 'Total')]
 head(data, 2)
 s <- plot_ly(data, x = ~Keyword, y = ~LinkedIn, type = 'bar', name = "Linkedin") %>%
-  add_trace(y = ~Indeed, name = "Indeed") %>% 
-  add_trace(y = ~SimplyHired, name = "SimplyHired") %>% 
-  add_trace(y = ~Monster, name = "Monster") %>% 
-  add_trace(y = ~Total, name = "Average") %>% 
-  layout(title = 'Technical Skills by Job Sites', yaxis = list(title = '% of Data Science Jobs'), xaxis = list(title = 'Tech Skills'), barmode = 'group')
+add_trace(y = ~Indeed, name = "Indeed") %>% 
+add_trace(y = ~SimplyHired, name = "SimplyHired") %>% 
+add_trace(y = ~Monster, name = "Monster") %>% 
+add_trace(y = ~Total, name = "Average") %>% 
+layout(title = 'Technical Skills by Job Sites', yaxis = list(title = '% of Data Science Jobs'), xaxis = list(title = 'Tech Skills'), barmode = 'group')
 s
 ```
 
@@ -269,11 +306,11 @@ head(top_10_soft_visual, 2)
 data2 <- top_10_soft_visual[,c('Keyword', 'LinkedIn', 'Indeed', 'SimplyHired', 'Monster', 'Total')]
 head(data, 2)
 t <- plot_ly(data2, x = ~Keyword, y = ~LinkedIn, type = 'bar', name = "Linkedin") %>%
-  add_trace(y = ~Indeed, name = "Indeed") %>% 
-  add_trace(y = ~SimplyHired, name = "SimplyHired") %>% 
-  add_trace(y = ~Monster, name = "Monster") %>% 
-  add_trace(y = ~Total, name = "Average") %>% 
-  layout(title = 'Non-Technical Skills by Job Sites', yaxis = list(title = '% of Data Science Jobs'), xaxis = list(title = 'Non-Tech Skills'), barmode = 'group')
+add_trace(y = ~Indeed, name = "Indeed") %>% 
+add_trace(y = ~SimplyHired, name = "SimplyHired") %>% 
+add_trace(y = ~Monster, name = "Monster") %>% 
+add_trace(y = ~Total, name = "Average") %>% 
+layout(title = 'Non-Technical Skills by Job Sites', yaxis = list(title = '% of Data Science Jobs'), xaxis = list(title = 'Non-Tech Skills'), barmode = 'group')
 t
 ```
 
