--- a/Project_3 _Data_Final.Rmd
+++ b/Project_3 _Data_Final.Rmd
@@ -2,25 +2,22 @@
 title: "Data 607 Project 3"
 author: "Joseph Simone & Kigamba Samuel"
 date: "10/20/2019"
-output:
-  html_document: default
-  pdf_document: default
+output: html_document
 ---
-  
-  
-  ```{r setup, include=FALSE}
+
+
+```{r setup, include=FALSE}
+
 library(XML)
 library(RCurl)
 library(knitr)
 library(dplyr)
 library(plyr)
-library(tidyr)
+library(plyr)
 library(plotly)
-library(tidyverse)
 library(tidyselect)
+library(tidyverse)
 library(data.table)
-#install.packages('png')
-library(htmltools)
 library(png)
 ```
 
@@ -33,25 +30,14 @@ This is a project for your entire class section to work on together, since being
 W. Edwards Deming said, “In God we trust, all others must bring data.” Please use data to answer the question, “Which are the most valued data science skills?” Consider your work as an exploration; there is not necessarily a “right answer.”
 
 
-### Background
+### Background 
 
 When researching for this project, this study https://365datascience.com/research-into-1001-data-scientist-profiles/, has findings that fits the critia needed to be calculated in order to complete this project. However, as a team, we needed some sort of data pool to start calulating perameters to answer a research question(s).
 
 ```{r, include=TRUE }
-imgage <- "https://raw.githubusercontent.com/josephsimone/DATA_607_Project_3/master/journal.PNG"
+imgage <- "C:/Users/jpsim/Documents/DATA Acquisition and Management/journal.png"
 include_graphics(imgage)
 ```
-```{r, echo=FALSE}
-url <- "https://raw.githubusercontent.com/josephsimone/DATA_607_Project_3/master/journal.PNG"
-```
-
-![](`r url`)
-
-
-<center><img src="`r url`"></center>
-
-
-
 
 With some futher research, we found a similar project that wanted to answer a similar question. 
 
@@ -60,52 +46,30 @@ https://www.kaggle.com/discdiver/the-most-in-demand-skills-for-data-scientists
 
 
 ```{r, include=TRUE }
-imgage <- "https://raw.githubusercontent.com/josephsimone/DATA_607_Project_3/master/kaggle.PNG"
+imgage <- "C:/Users/jpsim/Documents/DATA Acquisition and Management/kaggle.png"
 include_graphics(imgage)
 ```
-
-
-```{r, echo=FALSE}
-url <- "https://raw.githubusercontent.com/josephsimone/DATA_607_Project_3/master/kaggle.PNG"
-```
-
-![](`r url`)
-
-
-<center><img src="`r url`"></center>
-
-
 
 For this project we used the two main data-sets from the above kaggle web-page to answer our research question(s)
 
 kaggle_ds_job_listing_software.csv & kaggle_ds_general_skills_revised.csv
 
+
 ```{r, include=TRUE }
-imgage <- "https://github.com/josephsimone/DATA_607_Project_3/blob/master/kaggle_data.PNG"
+imgage <- "C:/Users/jpsim/Documents/DATA Acquisition and Management/kaggle_data.png"
 include_graphics(imgage)
 ```
 
 
-```{r, echo=FALSE}
-url <- "https://raw.githubusercontent.com/josephsimone/DATA_607_Project_3/master/kaggle_data.PNG"
-```
-
-![](`r url`)
-
-
-<center><img src="`r url`"></center>
-
-
-
-
 ```{r}
-general_skills <- read.csv(file="https://raw.githubusercontent.com/josephsimone/DATA_607_Project_3/master/kaggle_ds_general_skills_revised.csv")
+ general_skills <- read_csv(file="https://raw.githubusercontent.com/josephsimone/DATA_607_Project_3/master/kaggle_ds_general_skills_revised.csv")
 head(general_skills)
 ```
 
 
 ```{r}
-software_skills <-read.csv(file = "https://raw.githubusercontent.com/josephsimone/DATA_607_Project_3/master/kaggle_ds_job_listing_software.csv")
+software_skills <-read_csv(file = "https://raw.githubusercontent.com/josephsimone/DATA_607_Project_3/master/kaggle_ds_job_listing_software.csv")
+head(software_skills)
 ```
 
 ## Research Question
@@ -120,11 +84,11 @@ software_skills <-read.csv(file = "https://raw.githubusercontent.com/josephsimon
 As a team, we thought it be best to join these two data-sets, cleaning the respective data-frames into similar formats to be merged. 
 
 ```{r}
-dt1 <- data.table(general_skills, key = "ï..Keyword")
+dt1 <- as_tibble(general_skills, key = "ï..Keyword")
 dt1$Skill_Set <- "Soft"
-dt2 <- data.table(software_skills, key = "ï..Keyword")
+dt2 <- as_tibble(software_skills, key = "ï..Keyword")
 dt2$Skill_Set <- "Tech"
-dt2 = subset(dt2, select = -c(LinkedIn.., Indeed.., SimplyHired.., Monster.., Avg.., GlassDoor.Self.Reported...2017, Difference) )
+dt2 <- select(dt2,-c(6,7,8,9,10,11,12))
 ```
 
 
@@ -153,7 +117,7 @@ write.csv(result, file = "joined_df2.csv",row.names=FALSE)
 
 ## Importing newly created csv
 ```{r}
-ds_skills <- read.csv("joined_df2.csv")
+#ds_skills <- read_csv("joined_df2.csv")
 ds_skills <- read_csv(file = "https://raw.githubusercontent.com/josephsimone/DATA_607_Project_3/master/joined_df2.csv")
 head(ds_skills)
 ```
@@ -166,8 +130,7 @@ ds_skills$Total <- rowSums(sapply(ds_skills[,c(2:5)], as.numeric))
 ds_skills <- mutate(ds_skills[, c(1,6,2:5,7)])
 ds_skills <- data.frame(ds_skills)
 colnames(ds_skills)
-dim(ds_skills)
-head(ds_skills, 52)
+
 ```
 
 
@@ -176,7 +139,7 @@ head(ds_skills, 52)
 
 These two combined data-sets used the amount of keywords present during a general search on well known job recruitment websites, to fill in its' values. As a team, we thought it was more effective to create an average out of these values to get a better understanding of the dataset.
 
-```{r}
+```{r, message=FALSE, warning= FALSE}
 LinkedIn <- 8610
 Indeed <- 5138
 SimplyHired <- 3829
@@ -204,12 +167,10 @@ ds_skills_soft <- arrange(ds_skills_soft, desc(Total))
 head(ds_skills_soft, 2)
 #Top 10 soft skills
 ds_skills_soft <- ds_skills_soft[1:10,c(1,3:7)]
-head(ds_skills_soft, 2)
-#ds_skills_soft$Keyword
 ```
 
-
-# Top ten Soft skills as a percentage of total Data Science jobs
+#Bar Graphs
+## Top ten Soft skills as a percentage of total Data Science jobs
 
 ```{r}
 p <- plot_ly(ds_skills_soft, x = ~ ds_skills_soft, y = ds_skills_soft$Total, type = 'bar', name = ds_skills_soft$Keyword)
@@ -217,7 +178,7 @@ p
 ```
 
 
-#Bar Graphs
+
 ## Top 10 Soft as a pecentage of total data science jobs by job site
 
 ```{r}
@@ -277,11 +238,10 @@ y
 ```
 
 
-## Bar Graphs
 
 ### Top 10 Techs as a pecentage of total data science jobs by job site
 
-```{r, eval=TRUE}
+```{r, eval=TRUE, message = FALSE, warning=FALSE}
 top_10_tech_visual <- data.frame("Keyword"=top_10_tech, top_10_tech)
 head(top_10_tech_visual, 2)
 data <- top_10_tech_visual[,c('Keyword', 'LinkedIn', 'Indeed', 'SimplyHired', 'Monster', 'Total')]
@@ -296,11 +256,10 @@ s
 ```
 
 
-## Bar Graphs
 
 ### Top 10 Techs as a pecentage of total data science jobs by job site
 
-```{r, eval=TRUE}
+```{r, eval=TRUE, message=FALSE, warning=FALSE}
 top_10_soft_visual <- data.frame("Keyword"=top_10_soft, top_10_soft)
 head(top_10_soft_visual, 2)
 data2 <- top_10_soft_visual[,c('Keyword', 'LinkedIn', 'Indeed', 'SimplyHired', 'Monster', 'Total')]
