--- a/Project_3_Presentation.Rmd
+++ b/Project_3_Presentation.Rmd
@@ -128,11 +128,11 @@ Indeed <- 5138
 SimplyHired <- 3829
 Monster <- 3746
 Total <- LinkedIn + Indeed + SimplyHired + Monster
-ds_skills$LinkedIn <- ((ds_skills$LinkedIn)/(LinkedIn*100))
-ds_skills$Indeed <- ((ds_skills$Indeed)/(Indeed*100))
-ds_skills$SimplyHired <- ((ds_skills$SimplyHired)/(SimplyHired*100))
-ds_skills$Monster <- ((ds_skills$Monster)/((Monster*10)))
-ds_skills$Total <- ((ds_skills$Total/((Total*100))))
+ds_skills$LinkedIn <- ((ds_skills$LinkedIn)/(LinkedIn))*100
+ds_skills$Indeed <- ((ds_skills$Indeed)/(Indeed))*100
+ds_skills$SimplyHired <- ((ds_skills$SimplyHired)/(SimplyHired))*100
+ds_skills$Monster <- ((ds_skills$Monster)/((Monster)))*100
+ds_skills$Total <- ((ds_skills$Total/((Total))))*100
 ```
 
 
@@ -145,7 +145,7 @@ Set up for Bar Graphs
 ```{r}
 ds_skills_soft <- filter(ds_skills, ds_skills$Skill_Set == "Soft")
 dim(ds_skills_soft)
-head(ds_skills_soft, 20)
+head(ds_skills_soft)
 ds_skills_soft <- arrange(ds_skills_soft, desc(Total))
 
 top_10_soft <- ds_skills_soft[1:10,c(1,3:7)]
